upgraded project to SB version 3.3.4